# company-gtm-enricher

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
examples/: companies.csv
src/company_gtm_enricher/: __init__.py  cli.py  config.py  cost_estimator.py  csv_tools.py  enrichment_service.py  job_runner.py  models.py
src/company_gtm_enricher/providers/: __init__.py  base.py  factory.py  mock.py  openai_provider.py
tests/: test_cost_estimator.py  test_csv_tools.py  test_enrichment_service.py
